--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 
       <p id="auth">
       </p>
+      <button id="btn_login" type="button" class="btn btn-primary">
+        Login
+      </button>
 
     </div>
 
-    <script src="https://www.dropbox.com/static/api/dropbox-datastores-1.2-latest.js" type="text/javascript"></script>
+    <script src="//www.dropbox.com/static/api/dropbox-datastores-1.2-latest.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css" />
