--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="container">
-  
+
       <div class="header">
         <h1>LogMyLife</h1>
       </div>
@@ -21,9 +21,48 @@
       <h3>What did you eat?</h3>
       <div>
         <form id="form_food_eat" class="form-horizontal">
-          <div class="form-group col-sm-6">
+          <div class="form-group">
             <select id="select_food" class="form-control">
             </select>
+          </div>
+          <div class="form-group">
+            <label class="radio-inline">
+              <input type="radio"
+                     name="radio_time"
+                     id="radio_now"
+                     value="time_now"
+                     checked="checked"/>
+              Now
+            </label>
+            <label class="radio-inline">
+              <input type="radio"
+                     name="radio_time"
+                     id="radio_set"
+                     value="time_set"/>
+              Set time as
+            </label>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-2">
+              <select id="select_year" class="form-control">
+              </select>
+            </div>
+            <div class="col-sm-1">
+              <select id="select_month" class="form-control">
+              </select>
+            </div>
+            <div class="col-sm-1">
+              <select id="select_day" class="form-control">
+              </select>
+            </div>
+            <div class="col-sm-1">
+              <select id="select_hour" class="form-control">
+              </select>
+            </div>
+            <div class="col-sm-1">
+              <select id="select_minute" class="form-control">
+              </select>
+            </div>
           </div>
           <div class="col-sm-offset-4 col-sm-8">
             <button id="food_eat_submit" class="btn btn-primary">
@@ -33,6 +72,34 @@
         </form>
       </div>
       <br /><br />
+
+      <h3>History</h3>
+      <div>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Date</th>
+              <th>Vendor</th>
+              <th>Name</th>
+              <th>Energy</th>
+              <th>delete?</th>
+            </tr>
+          </thead>
+          <tbody id="food_history">
+          </tbody>
+          <tfoot>
+            <td></td>
+            <td></td>
+            <td>total</td>
+            <td id="total_energy"></td>
+          </tfoot>
+        </table>
+        <div class="col-sm-offset-4 col-sm-8">
+          <button id="food_delete_item" class="btn btn-warning">
+            Delete checked item
+          </button>
+        </div>
+      </div>
 
       <h3>Add New Food</h3>
       <div>
