--- a/index.html
+++ b/index.html
@@ -74,6 +74,21 @@
       <br /><br />
 
       <h3>History</h3>
+      <div class="form-group">
+        <div class="col-sm-2">
+          <select id="history_year" class="form-control">
+          </select>
+        </div>
+        <div class="col-sm-1">
+          <select id="history_month" class="form-control">
+          </select>
+        </div>
+        <div class="col-sm-1">
+          <select id="history_day" class="form-control">
+          </select>
+        </div>
+      </div>
+
       <div>
         <table class="table">
           <thead>
