--- a/index.html
+++ b/index.html
@@ -155,6 +155,24 @@
         </form>
       </div>
 
+      <h3>How to USE? (Food Section)</h3>
+      <p>
+        First of all, please input food information via "Add New Food",
+        "Vendor", "Name", "Energy" is required,
+        then click "Registration".
+        then you can choose it from "What did you eat?".
+        If you input "Vendor" and "Name" the same as exist item,
+        then "Registration" will update information.
+      </p>
+      <p>
+        Please choose "What did you eat?" and when, if now, check "Now",
+        else check "Set time as" and select time following pull down menu,
+        then click "Registration".
+      </p>
+      <p>
+        You can show food history what did you eat in a day.
+        Also you can travel your history via pull down menu.
+      </p>
     </div>
 
     <script src="//www.dropbox.com/static/api/dropbox-datastores-1.2-latest.js" type="text/javascript"></script>
