--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
       <h3>What did you eat?</h3>
       <form id="form_food_eat" class="form-horizontal">
         <div class="form-group">
-          <select id="select_food" class="form-control">
-          </select>
+          <div class="col-sm-4">
+            <select id="select_vendor" class="form-control">
+            </select>
+          </div>
+          <div class="col-sm-8">
+            <select id="select_food" class="form-control">
+            </select>
+          </div>
         </div>
         <div class="form-group">
           <label class="radio-inline">
