add salt indicator

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
               <th>Vendor</th>
               <th>Name</th>
               <th>Energy</th>
+              <th>Salt</th>
               <th>delete?</th>
             </tr>
           </thead>
@@ -114,6 +115,7 @@
             <td></td>
             <td>total</td>
             <td id="total_energy"></td>
+            <td id="total_salt"></td>
           </tfoot>
         </table>
         <div class="col-sm-offset-4 col-sm-8">
