add pfc balance indicator

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
               <th>Name</th>
               <th>Energy</th>
               <th>Salt</th>
+              <th>PFC</th>
               <th>delete?</th>
             </tr>
           </thead>
@@ -116,6 +117,8 @@
             <td>total</td>
             <td id="total_energy"></td>
             <td id="total_salt"></td>
+            <td id="total_pfc"></td>
+            <td></td>
           </tfoot>
         </table>
         <div class="col-sm-offset-4 col-sm-8">
